DEX-23333 | fix: text alignment

--- a/_src-lp/blocks/single-product-banner/single-product-banner.scss
+++ b/_src-lp/blocks/single-product-banner/single-product-banner.scss
@@ -147,7 +147,7 @@
 }
 
 .section.single-product-banner-container .single-product-banner-wrapper .single-product-banner .rightSide p {
-  text-align: center;
+  text-align: center !important;
   margin: 10px 0;
   line-height: 17px;
 }
